fixing alignment in header small change in tag

--- a/apps/modernization-ui/src/design-system/card/table/table-card-header.module.scss
+++ b/apps/modernization-ui/src/design-system/card/table/table-card-header.module.scss
@@ -3,7 +3,6 @@
 .title {
     display: flex;
     flex-direction: column;
-    align-self: flex-start;
 
     .titleContent {
         display: flex;
